@@ -33,7 +33,6 @@
 #include "event.h"
 #include "settings.h"
 #include "sound.h"
-#include "sound/lowlevel.h"
 #include "tape.h"
 #include "timer.h"
 #include "ui/ui.h"
@@ -231,7 +230,7 @@ timer_end( void )
   return event_remove_type( EVENT_TYPE_TIMER );
 }
 
-#if defined SOUND_SDL || defined SOUND_COREAUDIO
+#ifdef SOUND_FIFO
 
 /* Callback-style sound based timer */
 #include "sound/sfifo.h"
@@ -259,7 +258,7 @@ timer_frame_callback_sound( libspectrum_dword last_tstates )
   return 0;
 }
 
-#else                           /* #if defined SOUND_SDL || defined SOUND_COREAUDIO */
+#else                           /* #ifdef SOUND_FIFO */
 
 /* Blocking socket-style sound based timer */
 static int
@@ -272,7 +271,7 @@ timer_frame_callback_sound( libspectrum_dword last_tstates )
   return 0;
 }
   
-#endif                          /* #if defined SOUND_SDL || defined SOUND_COREAUDIO */
+#endif                          /* #ifdef SOUND_FIFO */
 
 int
 timer_frame( libspectrum_dword last_tstates )
